--- a/style.css
+++ b/style.css
@@ -34,6 +34,12 @@ h5,
 h6 {
   margin: 0;
 }
+button {
+  outline: none;
+  background: transparent;
+  border: none;
+  cursor: pointer;
+}
 .wrapper {
   height: 100%;
   padding: 16px;
@@ -64,15 +70,13 @@ ul {
   display: none;
   flex-wrap: wrap;
   width: 100%;
-  overflow: scroll;
+  margin-bottom: 24px;
 }
 
 .brand-list__item {
   background-color: #fff;
   border: 1px solid #eaeaea;
   border-radius: 6px;
-  min-width: 240px;
-  max-width: 240px;
   height: 72px;
   display: flex;
   align-items: center;
@@ -89,13 +93,16 @@ ul {
   border: 2px solid #ff3e79;
   border-radius: 50%;
 }
-
+.more-btn {
+  display: none;
+}
 .swiper {
   width: 100%;
   height: 100%;
+  margin-right: -16px;
 }
 
-.swiper__slide {
+.swiper-slide {
   background-color: #fff;
   border: 1px solid #eaeaea;
   border-radius: 6px;
@@ -114,6 +121,9 @@ ul {
   background-color: #dddddd;
 }
 
+.hidden {
+  display: none;
+}
 @media (min-width: 768px) {
   .wrapper {
     padding: 24px;
@@ -124,9 +134,8 @@ ul {
     column-gap: 24px;
     row-gap: 16px;
   }
-  .brand-list__item {
-    min-width: 224px;
-    max-width: 224px;
+  .more-btn {
+    display: block;
   }
   .swiper {
     display: none;
@@ -140,9 +149,8 @@ ul {
     column-gap: 24px;
     row-gap: 16px;
   }
-  .brand-list__item {
-    min-width: 240px;
-    max-width: 240px;
+  .hidden-tablet {
+    display: flex;
   }
 }
 
